RESOLVED FIXED193283
[PSON] Flash of blank content while transitioning from page A to page B.
https://bugs.webkit.org/show_bug.cgi?id=193283
Summary [PSON] Flash of blank content while transitioning from page A to page B.
Antti Koivisto
Reported 2019-01-09 07:48:22 PST
1. Load amazon.com 2. Load apple.com from a bookmark -> flash of blank content
Attachments
patch (12.73 KB, patch)
2019-01-09 08:17 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-01-09 08:17:24 PST
Chris Dumez
Comment 2 2019-01-09 09:35:54 PST
iOS crashes might be related: Regressions: Unexpected crashes (11) http/tests/quicklook/secure-document-with-subresources.html [ Crash ] quicklook/excel-legacy.html [ Crash ] quicklook/excel-macro-enabled.html [ Crash ] quicklook/excel.html [ Crash ] quicklook/keynote-09.html [ Crash ] quicklook/numbers-09.html [ Crash ] quicklook/pages-09.html [ Crash ] quicklook/powerpoint-legacy.html [ Crash ] quicklook/powerpoint.html [ Crash ] quicklook/word-legacy.html [ Crash ] quicklook/word.html [ Crash ]
Antti Koivisto
Comment 3 2019-01-09 09:45:05 PST
Looks like those tests are failing in trunk.
WebKit Commit Bot
Comment 4 2019-01-09 10:23:30 PST
Comment on attachment 358706 [details] patch Clearing flags on attachment: 358706 Committed r239777: <https://trac.webkit.org/changeset/239777>
WebKit Commit Bot
Comment 5 2019-01-09 10:23:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-01-09 10:24:55 PST
Antti Koivisto
Comment 7 2019-01-09 10:32:14 PST
Note You need to log in before you can comment on or make changes to this bug.