Source/WebKit/Shared/WebPageCreationParameters.cpp
@@ -73,12 +73,12 @@ void WebPageCreationParameters::encode(IPC::Encoder& encoder) const
     encoder.encodeEnum(layerHostingMode);
     encoder << mimeTypesWithCustomContentProviders;
     encoder << controlledByAutomation;
+    encoder << isSwapFromSuspended;
 
 #if PLATFORM(MAC)
     encoder << colorSpace;
     encoder << useSystemAppearance;
     encoder << useDarkAppearance;
-    encoder << shouldDelayAttachingDrawingArea;
 #endif
 #if PLATFORM(IOS_FAMILY)
     encoder << screenSize;
@@ -227,6 +227,8 @@ Optional<WebPageCreationParameters> WebPageCreationParameters::decode(IPC::Decod
         return WTF::nullopt;
     if (!decoder.decode(parameters.controlledByAutomation))
         return WTF::nullopt;
+    if (!decoder.decode(parameters.isSwapFromSuspended))
+        return WTF::nullopt;
 
 #if PLATFORM(MAC)
     if (!decoder.decode(parameters.colorSpace))
@@ -234,8 +236,6 @@ Optional<WebPageCreationParameters> WebPageCreationParameters::decode(IPC::Decod
     if (!decoder.decode(parameters.useSystemAppearance))
         return WTF::nullopt;
     if (!decoder.decode(parameters.useDarkAppearance))
-        return WTF::nullopt;
-    if (!decoder.decode(parameters.shouldDelayAttachingDrawingArea))
         return WTF::nullopt;
 #endif
 
